ecmascript/parser/tests/typescript-errors/tsc/types/tuple/optionalTupleElements1/input.ts.stderr
error: A required element cannot follow an optional element.
  --> $DIR/tests/typescript-errors/tsc/types/tuple/optionalTupleElements1/input.ts:14:11
   |
14 | type T5 = [number, string?, boolean];  // Error
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^

